--- a/systems/mcp-server/package.json
+++ b/systems/mcp-server/package.json
@@ -15,9 +15,11 @@
   "author": "Branded + Flow",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fs-extra": "^11.3.2",
+    "nodemailer": "^6.9.7",
     "path": "^0.12.7"
   },
   "devDependencies": {
