--- a/systems/mcp-server/package.json
+++ b/systems/mcp-server/package.json
@@ -16,13 +16,13 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.2",
-    "better-sqlite3": "^9.2.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fs-extra": "^11.3.2",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.7",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
