--- a/company/website/site/package.json
+++ b/company/website/site/package.json
@@ -5,7 +5,11 @@
   "type": "module",
   "dependencies": {
     "@hono/zod-validator": "^0.7.6",
+    "@react-email/components": "^0.0.25",
     "@react-spring/web": "^10.0.3",
+    "@react-three/drei": "^9.114.3",
+    "@react-three/fiber": "^8.17.10",
+    "@sentry/react": "^8.47.0",
     "@use-gesture/react": "^10.3.1",
     "framer-motion": "^12.23.26",
     "hono": "4.7.7",
@@ -14,6 +18,8 @@
     "react-dom": "19.0.0",
     "react-intersection-observer": "^10.0.0",
     "react-router": "^7.5.3",
+    "resend": "^4.0.1",
+    "three": "^0.171.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
@@ -21,9 +27,11 @@
     "@eslint/js": "9.25.1",
     "@getmocha/vite-plugins": "latest",
     "@getmocha/users-service": "^0.0.4",
+    "@sentry/vite-plugin": "^2.22.9",
     "@types/node": "22.14.1",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
+    "@types/three": "^0.171.0",
     "@vitejs/plugin-react": "4.4.1",
     "autoprefixer": "^10.4.21",
     "eslint": "9.25.1",
@@ -35,6 +43,7 @@
     "typescript": "5.8.3",
     "typescript-eslint": "8.31.0",
     "vite": "^7.1.3",
+    "vite-plugin-image-optimizer": "^1.1.8",
     "wrangler": "^4.33.0"
   },
   "scripts": {
