--- a/company/website/site/netlify.toml
+++ b/company/website/site/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "dist/client"
-  command = "npm install --legacy-peer-deps && npm run cf-typegen && npm run build"
+  command = "npm run cf-typegen && npm run build"
 
 [build.environment]
   NODE_VERSION = "20"
